force-app/main/default/objects/Product2/fields/AssociatedProductId__c.field-meta.xml
<CustomField>
    <fullName>AssociatedProductId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Associated Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Services</relationshipLabel>
    <relationshipName>Services</relationshipName>
    <type>Lookup</type>
</CustomField>