force-app/main/default/objects/Product2/fields/Group__c.field-meta.xml
<CustomField>
    <fullName>Group__c</fullName>
    <label>Group</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Practice__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Groups</valueSetName>
    </valueSet>
</CustomField>