force-app/main/default/objects/Product2/recordTypes/Ancillary.recordType-meta.xml
<RecordType>
    <fullName>Ancillary</fullName>
    <active>true</active>
    <label>Ancillary</label>
</RecordType>