force-app/main/default/objects/Product2/recordTypes/ResourceRole.recordType-meta.xml
<RecordType>
    <fullName>ResourceRole</fullName>
    <active>true</active>
    <label>Resource Role</label>
</RecordType>