force-app/main/default/objects/Product2/listViews/AllProducts.listView-meta.xml
<ListView>
    <fullName>AllProducts</fullName>
    <filterScope>Everything</filterScope>
    <label>All Products</label>
</ListView>